<resources>
    <string name="app_name">FixtureMakerSocial</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_pass">forget password?</string>
    <string name="loginwith">Log in With</string>
    <string name="facebook">facebook</string>
    <string name="twitter">twitter</string>
    <string name="google">google</string>
    <string name="haveaccount">Do not have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="forget_pass">Forget Password?</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="username">User Name</string>
    <string name="passwordAgain">Password Again</string>
    <string name="alreadyacount">I already have an account.</string>
    <string name="title">%s</string>
    <string name="string">%s</string>
    <string name="textUsername">%s</string>
    <string name="date">%s %s</string>
    <string name="comment">%d comments</string>
    <string name="back">Back</string>
   <string name="all">All</string>
    <string name="share">Share</string>
    <string name="message">Message</string>
    <string name="shareotherplatform">Share Other Platforms</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="favsport">Favorite Sport</string>
    <string name="favteam">Favorite Team</string>
    <string name="update">Update</string>
    <string name="newpassword">New Password</string>
    <string name="newpasswordagain">New Password Again</string>
    <string name="renewpassword">Renew Password</string>
   <string name="close">Close</string>
    <string name="slidersno">%d / %d</string>
    <string name="id">ID</string>
    <string name="createnew">+ Create New Fixture</string>
    <string name="profile">Profile</string>
    <string name="myfixture">My Fixtures</string>
    <string name="notifications">Notifications</string>
    <string name="usecode">Use Code</string>
    <string name="howtodo">How to do?</string>
    <string name="signout">Sign Out</string>
    <string name="tamam">Ok</string>
    <string name="mustfields">You must fill in all fields.</string>
    <string name="error">Error</string>
    <string name="facebook_app_id">Enter facebook id</string>
    <string name="google_web_client">Enter google web client</string>
    <string name="twitter_consumer_id">tW3jnPYMBYBqp4vs2ShuTk9E6</string>
    <string name="twitter_secret_id">P27yDr9ooL7snTBXPyV2eqrsPyOdFqKcoVpDdEl8x4GYWTVAsN</string>
    <string name="connecterror">An error was encountered. Please try again later.</string>
    <string name="passerror">Passwords do not match.</string>
    <string name="loginerror">An unexpected error was encountered. Please try again.</string>
    <string name="currentpasserror">You entered your current password incorrectly!</string>
    <string name="previouspasserror">The password you entered is the same as your previous password!</string>
    <string name="succes">Succes</string>
    <string name="passchange">Your password has been successfully changed.</string>
    <string name="failureupload">Error loading image.</string>
    <string name="succesUpload">Succes upload to image.</string>
    <string name="updatedata">Your information has been successfully updated.</string>
    
</resources>
