<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/eee"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:id="@+id/rl_sign_in"
    xmlns:android="http://schemas.android.com/apk/res/android">
       <ImageView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_centerHorizontal="true"
           android:layout_marginTop="17.5dp"
           android:id="@+id/logo"
           android:src="@drawable/logo_signin"/>

       <EditText
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/email"
           android:layout_below="@id/logo"
           android:layout_marginLeft="35dp"
           android:layout_marginRight="35dp"
           android:textSize="15sp"
           android:inputType="text"
           android:imeOptions="actionNext"
           android:lines="1"
           android:nextFocusForward="@id/edtPass"
           android:alpha=".5"
           android:nextFocusRight="@id/edtPass"
           android:layout_marginTop="35dp"
           android:background="@drawable/edt_signin"
           android:padding="10dp"
           android:id="@+id/edtEmail"
           />
       <EditText
           android:id="@+id/edtPass"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginRight="35dp"
           android:layout_marginLeft="35dp"
           android:inputType="textPassword"
           android:imeOptions="actionDone"
           android:lines="1"
           android:textSize="15sp"
           android:layout_marginTop="10dp"
           android:alpha=".5"
           android:background="@drawable/edt_signin"
           android:padding="10dp"
           android:hint="@string/password"
           android:layout_below="@id/edtEmail"/>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_marginRight="35dp"
          android:id="@+id/linear_sign"
          android:layout_marginLeft="35dp"
          android:layout_marginTop="10dp"
          android:layout_below="@+id/edtPass">

          <Button
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/btn_signin"
              android:text="@string/sign_in"
              android:textColor="@color/textColor"
              android:id="@+id/btnSignIn"
              android:textAlignment="textStart"
              android:layout_gravity="start"
              android:paddingLeft="7.5dp"
              android:drawableRight="@drawable/signinicon"
              android:paddingRight="10dp"
              android:textAllCaps="false"
              android:layout_weight="1"/>

          <TextView
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="1"
              android:textAlignment="textEnd"
              android:text="@string/forgot_pass"
              android:id="@+id/txtForgotPass"
              android:gravity="center_vertical"
              android:textSize="14sp"
              android:textColor="@color/textColor"
              tools:ignore="RtlCompat" />

      </LinearLayout>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/login_with"
           android:layout_below="@id/linear_sign"
           android:layout_marginTop="10dp"
           android:layout_centerHorizontal="true"
           android:textSize="15sp"
           android:padding="10dp"
           android:textColor="@color/textColor"
           android:text="@string/loginwith"
           />

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="15dp"
           android:orientation="horizontal"
           android:layout_marginLeft="35dp"
           android:layout_marginRight="35dp"
           android:layout_below="@+id/login_with">

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/btnFacebook"
               android:background="@drawable/btnfacebook"
               android:padding="10dp"
               android:text="@string/facebook"
               android:textColor="@color/white"
               android:textAlignment="center"
               android:layout_marginRight="5dp"
               style="@style/facebookloginbutton"
               android:layout_weight="1"/>

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/btnTwitter"
               android:background="@drawable/btntwitter"
               android:padding="10dp"
               android:layout_marginRight="5dp"

               android:text="@string/twitter"
               android:textAlignment="center"

               android:textColor="@color/white"
               android:textSize="14sp"
               android:layout_weight="1"/>
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/btnGoogle"
               android:background="@drawable/btngoogle"
               android:padding="10dp"
               android:textAlignment="center"
               android:text="@string/google"
               android:textColor="@color/white"
               android:textSize="14sp"
               android:layout_weight="1"/>

       </LinearLayout>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentBottom="true"
           android:text="@string/haveaccount"
           android:layout_margin="35dp"
           android:textSize="15sp"
           android:id="@+id/btnhaveAccount"
           android:textColor="@color/textColor"
           />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/sign_up"
        android:layout_marginRight="35dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="25dp"
        android:textSize="15sp"
        android:padding="10dp"
        android:textColor="@color/textColor"
        android:id="@+id/btnSignUp"/>
   </RelativeLayout>
