<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="@color/eee"
        >
        <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:android="http://schemas.android.com/apk/res/android">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="17.5dp"
                android:id="@+id/logo"
                android:src="@drawable/logo_signin"/>
            <EditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="35dp"
                android:layout_marginLeft="35dp"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:lines="1"
                android:nextFocusForward="@id/edtEmail"
                android:textSize="15sp"
                android:layout_marginTop="35dp"
                android:alpha=".5"
                android:background="@drawable/edt_signin"
                android:padding="10dp"
                android:hint="@string/username"
                android:layout_below="@id/logo"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textSize="15sp"
                android:layout_below="@id/edtUsername"
                android:nextFocusForward="@id/edtPass"
                android:nextFocusRight="@id/edtPass"
                android:layout_marginLeft="35dp"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:lines="1"
                android:layout_marginRight="35dp"
                android:alpha=".5"
                android:layout_marginTop="10dp"
                android:background="@drawable/edt_signin"
                android:padding="10dp"
                android:id="@+id/edtEmail"
                />
            <EditText
                android:id="@+id/edtPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:nextFocusRight="@id/edtPassAgain"
                android:layout_marginRight="35dp"
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                android:lines="1"
                android:nextFocusForward="@id/edtPassAgain"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="10dp"
                android:alpha=".5"
                android:background="@drawable/edt_signin"
                android:padding="10dp"
                android:hint="@string/password"
                android:layout_below="@id/edtEmail"/>

            <EditText
                android:id="@+id/edtPassAgain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="35dp"
                android:layout_marginLeft="35dp"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:lines="1"
                android:nextFocusForward="@id/btnSignUp"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:alpha=".5"
                android:background="@drawable/edt_signin"
                android:padding="10dp"
                android:hint="@string/passwordAgain"
                android:layout_below="@id/edtPass"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_signin"
                    android:text="@string/sign_up"
                    android:textColor="@color/textColor"
                    android:textAlignment="textStart"
                    android:layout_gravity="start"
                    android:layout_marginRight="35dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="7.5dp"
                    android:layout_below="@id/edtPassAgain"
                    android:drawableRight="@drawable/signinicon"
                    android:paddingRight="10dp"
                    android:id="@+id/btnSignUp"
                    />

        </RelativeLayout>

    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/alreadyacount"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="35dp"
        android:textSize="15sp"
        android:id="@+id/btnAlreadyAccount"
        android:textColor="@color/textColor"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/sign_in"
        android:padding="10dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="25dp"
        android:textSize="15sp"
        android:id="@+id/btnSignIn"
        android:textColor="@color/textColor"/>
</RelativeLayout>